# spotify-dl

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  INSTALL.md  Makefile  README.md  folders.json.example  install.command  pyproject.toml  reconcile_cache.py  sync_cron.sh  web_cron.sh
.beads/: interactions.jsonl  metadata.json
.claude/: CLAUDE.md
.github/workflows/: tests.yml
Spotify DL.app/Contents/: Info.plist
Spotify DL.app/Contents/MacOS/: launch
Spotify DL.app/Contents/Resources/: AppIcon.icns
companion/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
companion/src/: App.tsx  main.tsx
companion/src/components/: CuePads.tsx  Transport.tsx  Waveform.tsx
companion/src/lib/: cueStore.test.ts  cueStore.ts  cuesExport.test.ts  cuesExport.ts  exportShare.test.ts  exportShare.ts  format.test.ts  format.ts  idb.ts  importBundle.test.ts  importBundle.ts  loop.test.ts  loop.ts  manifest.test.ts  manifest.ts  opfs.ts  padGesture.test.ts  padGesture.ts  smoke.test.ts  types.ts  waveMath.test.ts  waveMath.ts
companion/src/screens/: ImportScreen.tsx  SetScreen.tsx  TrackScreen.tsx
docs/: UI_PRD.md
docs/superpowers/plans/: 2026-07-07-crate-ui-redesign.md  2026-07-07-dj-set-builder.md  2026-07-08-crate-v3.md  2026-07-09-flightcase.md
docs/superpowers/specs/: 2026-07-07-crate-ui-redesign-design.md  2026-07-07-dj-set-builder-design.md  2026-07-09-flightcase-design.md
frontend/: components.json  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LedLamp.tsx  PanelHeader.tsx  Shell.tsx  VuMeter.tsx
frontend/src/lib/: api.test.ts  api.ts  camelot.test.ts  camelot.ts  chart.test.ts  chart.ts  format.test.ts  format.ts  meter.test.ts  meter.ts  queries.ts  setStorage.test.ts  setStorage.ts  trackSort.test.ts  trackSort.ts  types.ts  wheel.test.ts  wheel.ts
frontend/src/pages/DjSets/: Audition.test.tsx  Audition.tsx  AuditionBar.tsx  CamelotWheel.tsx  Duplicates.tsx  EnergyScope.tsx  SaveSetDialog.tsx  SetLibrary.tsx  SetRail.tsx  StatusStrip.tsx  Suggestions.tsx  TrackBrowser.tsx  TrackFilters.tsx  TrackTable.tsx  auditionOffset.test.ts  auditionOffset.ts  dupeSelect.test.ts  dupeSelect.ts  index.tsx  seams.test.ts  seams.ts  setResolve.test.ts  setResolve.ts  statusReadouts.test.ts  statusReadouts.ts  suggestGate.test.ts  suggestGate.ts  useSetState.test.ts  useSetState.ts
frontend/src/pages/Download/: CronList.tsx  FolderPicker.tsx  JobsPanel.tsx  LibraryPanel.tsx  PasteDeck.tsx  SchedulePanel.tsx  index.tsx  jobs.test.ts  links.test.ts  links.ts  schedule.test.ts  schedule.ts  usePreviews.test.ts  usePreviews.ts
spotify_dl/: bundle.py  constants.py  dj.py  folders.json  rekordbox.py  scaffold.py  setfile.py  soundcloud.py  spotify.py  spotify_dl.py  sync.py  web.py  youtube.py
spotify_dl/static/: index.html
tests/: conftest.py  test_bundle.py  test_dj.py  test_rekordbox.py  test_setfile.py  test_soundcloud.py  test_spotify_fetch_tracks.py  test_web.py  test_youtube.py
